Updated task service, feign client, security, and comments logic